--- a/css/styles.css
+++ b/css/styles.css
@@ -296,3 +296,141 @@ ul {
 Slider
 ==================
 */
+
+section {
+  width: 85vw;
+  max-width: var(--fixedWidth); /* 600 px*/
+  margin: 0 auto;
+  margin-top: 5rem;
+  text-align: center;
+  padding: 1rem 0;
+  position: relative;
+}
+
+.reviews {
+  margin-bottom: 4rem;
+}
+
+.reviews h2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.reviews span {
+  font-size: 1em;
+  color: var(--primary-500);
+  margin-right: 1rem;
+  font-weight: 800;
+}
+
+.img.profile-img {
+  width: 150px;
+  height: 150px;
+  object-fit: cover;
+  border: 1px solid var(--clr-grey-7);
+  background: var(--clr-white);
+  padding: 0.25rem;
+  border-radius: 50%;
+  box-shadow: var(--dark-shadow);
+  margin: 0 auto;
+  margin-bottom: 0.5rem;
+}
+
+.slide {
+  border: 2px solid red;
+}
+
+h4 {
+  text-transform: uppercase;
+  font-weight: 500;
+  color: var(--primary-500);
+  letter-spacing: var(--letterSpacing);
+  margin: 0.5rem 0;
+}
+
+.title {
+  margin-bottom: 1.25rem;
+  letter-spacing: 2px;
+  text-transform: capitalize;
+}
+
+.text {
+  width: 100%;
+  max-width: 35em;
+  margin: 0 auto;
+  line-height: 1.8;
+  color: var(--grey-500);
+  letter-spacing: 1px;
+}
+
+.quote-icon {
+  font-size: 3rem;
+  color: var(--primary-500);
+  margin-top: 2rem;
+}
+
+.btn {
+  position: absolute;
+  top: 350px;
+  border-radius: 50%;
+  padding: 0.5rem 0.75rem;
+  background: var(--grey-500);
+  color: var(--white);
+  border: transparent;
+  cursor: pointer;
+}
+
+.next-btn {
+  right: -1rem;
+}
+.prev-btn {
+  left: -1rem;
+}
+
+@media screen and (min-width: 768px) {
+  .next-btn {
+    right: -5rem;
+  }
+  .prev-btn {
+    left: -5rem;
+  }
+
+  .btn {
+    font-size: 1.3rem;
+  }
+
+  .quote-icon {
+    font-size: 4rem;
+  }
+}
+
+/* CSS for JS */
+
+.slide-container {
+  display: flex;
+  height: 450px;
+  overflow: hidden;
+  position: relative;
+}
+
+.slide {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transition: all 0.3s ease-in-out;
+  opacity: 0;
+}
+
+.slide.active {
+  opacity: 1;
+  transform: translateX(0);
+}
+.slide.next {
+  transform: translateX(100%);
+}
+.slide.last {
+  transform: translateX(-100%);
+}
